<resources>
    <string name="app_name">Popular Movies</string>
    <string name="no_internet_message">Please connect to internet and restart or provide
        API key</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="sort_by_rating">Sort By Rating</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="movie_title">Movie Title</string>
    <string name="year_of_release">Year of release</string>
    <string name="vote_average">vote average</string>
    <string name="plot_synopsis">plot synopsis</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="youtube_site">YouTube</string>
    <string name="reviews">Reviews</string>
    <string name="show_reviews">Show reviews</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="movie">MOVIE</string>
    <string name="movie_poster_in_landscape">movie poster in landscape</string>
    <string name="details">Movie Details</string>
    <string name="play_button">play button</string>
    <string-array name="sortByCategories">
        <item>Favorites</item>
        <item>most popular</item>
        <item>highest rated</item>
    </string-array>
</resources>