<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetailsActivity">

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:padding="16dp"
        android:textSize="30sp"
        tools:text="@string/movie_title" />

    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_default="spread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_movie_thumbnail"
                app:layout_constraintEnd_toStartOf="@+id/tv_release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:scaleType="centerCrop"
                tools:layout_height="200dp" />

            <TextView
                android:id="@+id/tv_release_date"
                app:layout_constraintBottom_toTopOf="@+id/tv_vote_average"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="22sp"
                tools:text="@string/year_of_release" />

            <TextView
                android:id="@+id/tv_vote_average"
                app:layout_constraintBottom_toTopOf="@+id/btn_favorite"
                app:layout_constraintStart_toStartOf="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@string/vote_average" />

            <ImageView
                android:id="@+id/btn_favorite"
                app:layout_constraintBottom_toTopOf="@+id/iv_movie_thumbnail"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_thumbnail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@android:drawable/btn_star_big_off"
                android:contentDescription="@string/add_to_favorites"
                android:onClick="toggleFavorite"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_plot_synopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@string/plot_synopsis" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trailers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/play_trailer" />

            <TextView
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reviews"
                android:textSize="22sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reviews"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/show_reviews" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>